# ewf-image

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  compatibility.md  limitations.md  migrating-to-0.2.md  testing.md
examples/: export_raw.rs  inspect_logical.rs  read_image.rs  write_image.rs
src/: codepage.rs  date_time.rs  decode.rs  error.rs  image.rs  index.rs  lib.rs  metadata.rs  reader_cache.rs  reader_statistics.rs  segment.rs  signature.rs  single_files.rs  types.rs  verify.rs  writer.rs
src/format/: ewf1.rs  ewf2.rs  mod.rs
tests/: api.rs  corpus.rs  reader.rs  reader_performance.rs  signature.rs  writer.rs
